--- a/src/templates/checkrawoutputkeys.html
+++ b/src/templates/checkrawoutputkeys.html
@@ -1,9 +1,8 @@
-<div>
+<div class="row">
 
-    <div class="center">
-        <br/>
-        <h3 class="center">Signed Outputs Public Keys Checker</h3>
-    </div>
+    <header>
+        <h2>Signed Outputs Public Keys Checker</h2>
+    </header>
 
     <h3>Data file prefix: {{data_prefix}}</h3>
 
