--- a/src/templates/checkrawkeyimgs.html
+++ b/src/templates/checkrawkeyimgs.html
@@ -1,10 +1,9 @@
 
-<div>
+<div class="row">
 
-    <div class="center">
-        <br/>
-        <h3 class="center">Signed Key Images Checker</h3>
-    </div>
+    <header>
+        <h3>Signed Key Images Checker</h3>
+    </header>
 
 
     <h3>Data file prefix: {{data_prefix}}</h3>
