--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,9 +1,12 @@
-<div class="center">
-    <h6 style="margin-top:10px">
-        <a href="https://github.com/moneroexamples/onion-monero-blockchain-explorer">source code</a>
-        | explorer version: {{last_git_commit_date}}-{{last_git_commit_hash}}
-        | monero version: {{monero_version_full}}
-    </h6>
-</div>
-</body>
+            <div class="row">
+                <center>
+                <p>
+                    <a href="https://github.com/moneroexamples/onion-monero-blockchain-explorer">source code</a>
+        		    | explorer version: {{git_branch_name}}-{{last_git_commit_date}}-{{last_git_commit_hash}}
+                    | monero version: {{monero_version_full}}
+                </p>
+                </center>
+            </div>
+        </div>
+    </body>
 </html>
