--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
     {{#refresh}}
-        <meta http-equiv="refresh" content="10">
+    <meta http-equiv="refresh" content="10">
     {{/refresh}}
-    <title>Onion Monero Blockchain Explorer</title>
+    <link href="favicon.ico" type="image/x-icon" rel="icon" />
+    <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" />
+    <title>Monero Explorer</title>
     <!--<link rel="stylesheet" type="text/css" href="/css/style.css">-->
     <style type="text/css">
         {{#css_styles}}{{/css_styles}}
@@ -14,20 +20,23 @@
 
 </head>
 <body>
-<div>
+    <div class="main-panel">
 
-    <div class="center">
-        <h1 class="center"><a href="/">Onion Monero Blockchain Explorer</a></h1>
-        <h4 style="font-size: 15px; margin: 0px">(no javascript - no cookies - no web analytics trackers - no images - open sourced)</h4>
-    </div>
-
-
-    <div class="center">
-        <form action="/search" method="get" style="width:100%; margin-top:15px" class="style-1">
-            <input type="text" name="value" size="120"
-                   placeholder="block height, block hash, transaction hash">
-            <input type="submit" value="Search">
-        </form>
-    </div>
-
-</div>
+        <div class="flex two">
+            <div class="full half-1000">
+                <header>
+                    <h1 id="site-title"><a href="/">Onion Monero Blockchain Explorer</a></h1>
+                    <p id="site-sub-title">(no javascript - no cookies - no web analytics trackers - no images - open sourced)</p>
+                </header>
+            </div>
+            <div class="full half-1000">
+                <div id="search">
+                    <center>
+                        <form action="/search" method="get">
+                            <input class="search-fld" type="text" name="value" size="10" placeholder="block height, block hash, transaction hash">
+                            <input class="search-btn" type="submit" value="Search">
+                        </form>
+                    </center>
+                </div>
+            </div>
+        </div>
