--- a/src/templates/my_outputs.html
+++ b/src/templates/my_outputs.html
@@ -91,7 +91,7 @@
                             <table class="center">
                               <tr>
                                   <td style="text-align: center;">
-                                      Mixin {{mixin_pub_key}} might use your outputs
+                                      Ring member {{mixin_pub_key}} might use your outputs
                                       <br/>
                                       from tx of hash: <a href="/tx/{{mix_tx_hash}}">{{mix_tx_hash}}</a>
                                       <br/>(tx public key: {{mix_tx_pub_key}})
@@ -133,7 +133,7 @@
 
         </div>
         <h3>
-            Sum XMR from matched and marked by * mixin's outputs: {{sum_mixin_xmr}}
+            Sum XMR from matched and marked by * ring member's outputs: {{sum_mixin_xmr}}
             <br/>
             <span style="font-size: 16px"> Possible spending is:
                 {{possible_spending}} (tx fee included)
