--- a/src/templates/partials/tx_details.html
+++ b/src/templates/partials/tx_details.html
@@ -1,134 +1,138 @@
-
-<div>
-
-    <H4 style="margin:5px">Tx hash: {{tx_hash}}</H4>
+<div class="row">
+<header>
+    <h2 class="no-padding">Tx hash: <span class="label">{{tx_hash}}</span></h2>
     {{#enable_mixins_details}}
-        <H5 style="margin:5px">Tx prefix hash: {{tx_prefix_hash}}</H5>
+    <h2 class="no-padding">Tx prefix hash: <span class="label">{{tx_prefix_hash}}</span></h2>
     {{/enable_mixins_details}}
-    <H5 style="margin:5px">Tx public key: {{tx_pub_key}}</H5>
-
+    <h2 class="no-padding">Tx public key: <span class="label">{{tx_pub_key}}</span></h2>
     {{#has_payment_id}}
-        <H5 style="margin:5px">Payment id: {{payment_id}}</H5>
+        <h2 class="no-padding">Payment id: <span class="label">{{payment_id}}</span></h2>
     {{/has_payment_id}}
-
     {{#has_payment_id8}}
-        <H5 style="margin:5px">Payment id (encrypted): {{payment_id8}}</H5>
+        <h2 class="no-padding">Payment id (encrypted): <span class="label">{{payment_id8}}</span></h2>
     {{/has_payment_id8}}
-
-
+</header>
     {{#have_prev_hash}}
-        <H5>Previous tx: <a href="/tx/{{prev_hash}}">{{prev_hash}}</a></H5>
+        <p>Previous tx: <a href="/tx/{{prev_hash}}">{{prev_hash}}</a></p>
     {{/have_prev_hash}}
-
     {{#have_next_hash}}
-        <H5>Next tx: <a href="/tx/{{next_hash}}">{{next_hash}}</a></H5>
+        <p>Next tx: <a href="/tx/{{next_hash}}">{{next_hash}}</a></p>
     {{/have_next_hash}}
+</div>
 
 
+<div class="row">
+            <table class="primary table">
+                {{^have_raw_tx}}
+                <tr>
+                    <td>Timestamp: {{blk_timestamp_uint}}</td>
+                    <td>Timestamp [UCT]: {{blk_timestamp}}</td>
+                    <td>Age [y:d:h:m:s]: {{delta_time}}</td>
+                </tr>
+                {{/have_raw_tx}}
 
-    <table class="center" style="width: 80%; margin-top:10px">
-        {{^have_raw_tx}}
-        <tr>
-            <td>Timestamp: {{blk_timestamp_uint}}</td>
-            <td>Timestamp [UCT]: {{blk_timestamp}}</td>
-            <td>Age [y:d:h:m:s]: {{delta_time}}</td>
-        </tr>
-        {{/have_raw_tx}}
-        <tr>
-            <td>Block: <a href="/block/{{blk_height}}">{{blk_height}}</a></td>
-            <td>Fee: {{tx_fee}}</td>
-            <td>Tx size: {{tx_size}} kB</td>
-        </tr>
-        <tr>
-            <td>Tx version: {{tx_version}}</td>
-            <td>No of confirmations: {{confirmations}}</td>
-            <td>RingCT/type:  {{#is_ringct}}yes/{{rct_type}}{{/is_ringct}}{{^is_ringct}}no{{/is_ringct}}</td>
-        </tr>
-
-
-        <tr>
-            <td colspan="3">Extra: {{extra}}</td>
-        </tr>
+                <tr>
+                    <td>Block: <a href="/block/{{blk_height}}">{{blk_height}}</a></td>
+                    <td>Fee: {{tx_fee}}</td>
+                    <td>Tx size: {{tx_size}} kB</td>
+                </tr>
+                <tr>
+                    <td>Tx version: {{tx_version}}</td>
+                    <td>No of confirmations: {{confirmations}}</td>
+                    <td>RingCT/type:  {{#is_ringct}}YES/{{rct_type}}{{/is_ringct}}{{^is_ringct}}NO{{/is_ringct}}</td>
+                </tr>
 
 
-    </table>
+                <tr>
+                    <td colspan="3" style="word-break:break-all">Extra: {{extra}}</td>
+                </tr>
 
 
-  <h3>{{outputs_no}} output(s) for total of {{outputs_xmr_sum}} xmr</h3>
-  <div class="center">
-      <table class="center">
-          <tr>
-              <td>stealth address</td>
-              <td>amount</td>
-              <td>amount idx</td>
-          </tr>
-          {{#outputs}}
-          <tr>
-              <td>{{output_idx}}: {{out_pub_key}}</td>
-              <td>{{amount}}</td>
-              <td>{{amount_idx}} of {{num_outputs}}</td>
-          </tr>
-          {{/outputs}}
+            </table>
+        </div>
+
+<div class="row">
+    <header>
+        <h3>{{outputs_no}} output(s) for total of {{outputs_xmr_sum}} XMR</h3>
+    </header>
+      <table class="primary table">
+          <thead>
+              <tr>
+                  <th>stealth address</th>
+                  <th>amount</th>
+                  <th>amount idx</th>
+              </tr>
+          </thead>
+          <tbody>
+            {{#outputs}}
+                <tr>
+                <td>{{output_idx}}: {{out_pub_key}}</td>
+                <td>{{amount}}</td>
+                <td>{{amount_idx}} of {{num_outputs}}</td>
+                </tr>
+            {{/outputs}}
+          </tbody>
       </table>
-  </div>
+</div>
 
-    {{^have_raw_tx}}
-    <div class="center" style="width:90%">
-        <div class="tabs">
+{{^have_raw_tx}}
+<div class="row">
+    <div class="tabs two">
 
-            <div class="tab">
-                <input type="radio" id="tab-1" name="tab-group-1" checked>
-                <label for="tab-1">Decode outputs</label>
-                <div class="content">
-                    <h4 style="margin: 0px">Check which outputs belong to given Monero address and viewkey</h4>
-                    <h5 style="margin: 0px">
-                        For RingCT transactions, outputs' amounts are also decoded
-                        <br/>
-                        Note: address and viewkey are sent to the server, as the calculations are done on the server side
-                    </h5>
-                    <form action="/myoutputs" method="post" style="width:100%; margin-top:2px" class="style-1">
-                        <input type="hidden" name="tx_hash" value="{{tx_hash}}"><br/>
-                        <input type="text" name="xmr_address" size="90" placeholder="Monero address"><br/>
-                        <input type="text" name="viewkey" size="90" placeholder="Private viewkey" style="margin-top:5px"><br/>
-                        <input type="hidden" name="raw_tx_data" value="{{raw_tx_data}}">
-                        <!--above raw_tx_data field only used when checking raw tx data through tx pusher-->
-                        <input type="submit" value="Decode outputs" style="margin-top:5px" >
-                    </form>
-                </div>
+        <input type="radio" id="tab-1" name="tab-group-1" checked>
+        <label class="pseudo button toggle" for="tab-1">Decode outputs</label>
+        <input type="radio" id="tab-2" name="tab-group-1">
+        <label class="pseudo button toggle" for="tab-2">Prove sending</label>
+
+        <div class="row">
+            <div class="content">
+                <h4>Check which outputs belong to given Monero address and viewkey</h4>
+                <p>
+                    For RingCT transactions, outputs' amounts are also decoded
+                    <br/>
+                    Note: address and viewkey are sent to the server, as the calculations are done on the server side
+                </p>
+                <form action="/myoutputs" method="post" style="width:100%; margin-top:2px" class="style-1">
+                    <input type="hidden" name="tx_hash" value="{{tx_hash}}"><br/>
+                    <input type="text" name="xmr_address" size="90" placeholder="Monero address"><br/>
+                    <input type="text" name="viewkey" size="90" placeholder="Private viewkey" style="margin-top:5px"><br/>
+                    <input type="hidden" name="raw_tx_data" value="{{raw_tx_data}}">
+                    <!--above raw_tx_data field only used when checking raw tx data through tx pusher-->
+                    <input type="submit" value="Decode outputs" style="margin-top:5px" >
+                </form>
             </div>
 
-            <div class="tab">
-                <input type="radio" id="tab-2" name="tab-group-1">
-                <label for="tab-2">Prove sending</label>
-
-                <div class="content">
-                    <h4 style="margin: 0px">Prove to someone that you send them Monero in this transaction</h4>
-                    <h5 style="margin: 0px">
-                        Tx private key can be obtained using <i>get_tx_key</i>
-                        command in  <i>monero-wallet-cli</i> command line tool
-                        <br/>
-                        Note: address and tx private key are sent to the server, as the calculations are done on the server side
-                    </h5>
-                    <form action="/prove" method="post" style="width:100%;margin-top:2px" class="style-1">
-                       <input type="hidden" name="txhash" value="{{tx_hash}}"><br/>
-                       <input type="text" name="txprvkey" size="90" placeholder="Tx private key"><br/>
-                       <input type="text" name="xmraddress" size="90" placeholder="Recipient's Monero Address" style="margin-top:5px"><br/>
-                       <input type="submit" value="Prove sending" style="margin-top:5px">
-                    </form>
-                </div>
+            <div class="content">
+                <h4>Prove to someone that you send them Monero in this transaction</h4>
+                <p>
+                Tx private key can be obtained using <i>get_tx_key</i>
+                command in  <i>monero-wallet-cli</i> command line tool
+                <br/>
+                Note: address and tx private key are sent to the server, as the calculations are done on the server side
+                </p>
+                <form action="/prove" method="post" style="width:100%;margin-top:2px" class="style-1">
+                <input type="hidden" name="txhash" value="{{tx_hash}}"><br/>
+                <input type="text" name="txprvkey" size="90" placeholder="Tx private key"><br/>
+                <input type="text" name="xmraddress" size="90" placeholder="Recipient's Monero Address" style="margin-top:5px"><br/>
+                <input type="submit" value="Prove sending" style="margin-top:5px">
+                </form>
             </div>
         </div>
     </div>
-    {{/have_raw_tx}}
+</div>
 
-
+{{/have_raw_tx}}
 
 {{#has_inputs}}
+
     {{#enable_mixins_details}}
-      <h3>Inputs' mixins time scale (from {{min_mix_time}} till {{max_mix_time}};
-        resolution: {{timescales_scale}} days{{#have_raw_tx}}; R - real mixin {{/have_raw_tx}})
-      </h3>
-      <div class="center">
+    <header>
+        <h3>
+            Inputs' ring size time scale (from {{min_mix_time}} till {{max_mix_time}};
+            resolution: {{timescales_scale}} days{{#have_raw_tx}}; R - real ring member {{/have_raw_tx}})
+        </h3>
+    </header>
+      <div class="card">
         <ul class="center">
           {{#timescales}}
             <li  style="list-style-type: none; text-align: center; font-size: 8px">|{{timescale}}|</li>
@@ -137,55 +141,58 @@
       </div>
     {{/enable_mixins_details}}
 
-    {{^inputs_xmr_sum_not_zero}}
+    <header>
+        {{^inputs_xmr_sum_not_zero}}
         <h3>{{inputs_no}} input(s) for total of {{inputs_xmr_sum}} xmr</h3>
-    {{/inputs_xmr_sum_not_zero}}
-    {{#inputs_xmr_sum_not_zero}}
+        {{/inputs_xmr_sum_not_zero}}
+        {{#inputs_xmr_sum_not_zero}}
         {{^have_any_unknown_amount}}
-            <h3>{{inputs_no}} inputs(s) for total of {{inputs_xmr_sum}} xmr</h3>
+        <h3>{{inputs_no}} inputs(s) for total of {{inputs_xmr_sum}} xmr</h3>
         {{/have_any_unknown_amount}}
         {{#have_any_unknown_amount}}
-            <h3>{{inputs_no}} inputs(s) for total of at least {{inputs_xmr_sum}} xmr</h3>
+        <h3>{{inputs_no}} inputs(s) for total of at least {{inputs_xmr_sum}} xmr</h3>
         {{/have_any_unknown_amount}}
-    {{/inputs_xmr_sum_not_zero}}
+        {{/inputs_xmr_sum_not_zero}}
 
-    {{#show_part_of_inputs}}
-        <h5 style="margin-top: 2px">
+        {{#show_part_of_inputs}}
+        <p>
            Only {{max_no_of_inputs_to_show}} are inputs shown. To see all,
             click "<a href="/tx/{{tx_hash}}/1">more details</a>"
-        </h5>
-    {{/show_part_of_inputs}}
+        </p>
+        {{/show_part_of_inputs}}
+    </header>
 
-    <div class="center">
-       <table class="center">
-      {{#inputs}}
-        <tr>
-          <td style="text-align: left;">
-              key image  {{input_idx}}: {{in_key_img}}
-              {{#have_raw_tx}}
-               Already spent:
-                {{#already_spent}}
-                    <span style="color: red; font-weight: bold;">True</span>
-                {{/already_spent}}
-              {{^already_spent}}
-                False
-              {{/already_spent}}
 
-              {{/have_raw_tx}}
-          </td>
-          <td>amount: {{amount}}</td>
-       </tr>
-          <tr>
-            <td colspan="2">
-                {{#enable_mixins_details}}
-                    <table style="width:100%; margin-bottom:20px">
+<div class="row">
+    <table class="table primary">
+    {{#inputs}}
+    <tr>
+      <td style="text-align: left;">
+          key image  {{input_idx}}: {{in_key_img}}
+          {{#have_raw_tx}}
+           Already spent:
+            {{#already_spent}}
+                <span style="color: red; font-weight: bold;">TRUE</span>
+            {{/already_spent}}
+          {{^already_spent}}
+            False
+          {{/already_spent}}
+
+          {{/have_raw_tx}}
+      </td>
+      <td>amount: {{amount}}</td>
+   </tr>
+      <tr>
+        <td colspan="2">
+            {{#enable_mixins_details}}
+                <table style="width:100%; margin-bottom:20px">
                     <tr>
-                      <td>Mixin stealth address</td>
+                      <td>ring member</td>
                       {{#have_raw_tx}}
                         <td>Is it real?</td>
                       {{/have_raw_tx}}
                       <td>blk</td>
-                      <td>mixin</td>
+                      <td>ring size</td>
                       <td>in/out</td>
                       <td>timestamp</td>
                       <td>age [y:d:h:m:s]</td>
@@ -214,7 +221,7 @@
                 {{^enable_mixins_details}}
                 <table style="width:100%; margin-bottom:20px">
                     <tr>
-                        <td>Mixin stealth address</td>
+                        <td>ring member</td>
                         {{#have_raw_tx}}
                             <td>Is it real?</td>
                         {{/have_raw_tx}}
@@ -226,7 +233,7 @@
                         {{#have_raw_tx}}
                             {{#mix_is_it_real}}
                                 <td><span style="color: #008009;font-weight: bold">{{mix_is_it_real}}</span></td>
-                            {{/mix_is_it_real}}
+                                {{/mix_is_it_real}}
                             {{^mix_is_it_real}}
                                 <td>{{mix_is_it_real}}</td>
                             {{/mix_is_it_real}}
@@ -236,8 +243,8 @@
                     {{/mixins}}
                 </table>
                 {{/enable_mixins_details}}
-           </td>
-         </tr>
+         </td>
+    </tr>
 
 <!--
         {{#with_ring_signatures}}
@@ -259,39 +266,35 @@
 
         {{/with_ring_signatures}}
 -->
-
-      {{/inputs}}
-      </table>
-
-
-  </div>
-
-
- {{/has_inputs}}
+    {{/inputs}}
+</table>
+</div>
+{{/has_inputs}}
 
 {{^have_raw_tx}}
+<div class="row">
     {{^with_ring_signatures}}
         {{#show_more_details_link}}
-            <h5 style="margin-top:1px"><a href="/tx/{{tx_hash}}/1">More details</a></h5>
+           <p> <a class="button shyButton" href="/tx/{{tx_hash}}/1">More details</a></p>
         {{/show_more_details_link}}
     {{/with_ring_signatures}}
     {{#with_ring_signatures}}
-        <label id="show-decoded-inputs" for="toggle-1">Show JSON representation of tx</label>
-        <input type="checkbox" id="toggle-1">
-        <div id="decoded-inputs">
-            <div class="center">
-                <code style="white-space: pre-wrap; font-size: 10px">
-                    {{tx_json}}
-                </code>
+
+	   <div id="show-json">
+                <a href="#show-json" id="open" class="btn btn-default btn-sm">Show JSON representation of tx</a>
+                <div id="hidden-content">
+			<header><h4>JSON representation of tx</h4> <a href="#hide-json" id="close" class="btn btn-default btn-sm">[HIDE]</a></header>
+                    <code style="white-space: pre-wrap; font-size: 10px; background: #FFF">{{tx_json}}</code>
+                </div>
             </div>
-        </div>
-        <br/><br/>
-        <h5 style="margin-top:1px"><a href="/tx/{{tx_hash}}">Less details</a></h5>
+
+	<p><a class="button shyButton" href="/tx/{{tx_hash}}">Less details</a></ha></p>
     {{/with_ring_signatures}}
+</div>
 {{/have_raw_tx}}
 
-
 {{#show_cache_times}}
+<div class="row">
     <div class="center">
         {{#construction_time}}
             <h6 style="margin-top: 1px;color:#949490">
@@ -302,6 +305,22 @@
             </h6>
         {{/construction_time}}
     </div>
+</div>
 {{/show_cache_times}}
 
+
+{{#show_cache_times}}
+<div class="row">
+    <div class="center">
+        {{#construction_time}}
+            <h6 style="margin-top: 1px;color:#949490">
+                Tx details construction time: {{construction_time}} s
+                {{#from_cache}}
+                    <br/>Tx read from the tx cache
+                {{/from_cache}}
+            </h6>
+        {{/construction_time}}
+    </div>
 </div>
+{{/show_cache_times}}
+
