--- a/src/templates/pushrawtx.html
+++ b/src/templates/pushrawtx.html
@@ -1,29 +1,28 @@
-<div>
+<div class="row">
 
-    <div class="center">
-        <br/>
-        <h3 class="center">Transaction Pusher</h3>
-    </div>
+    <header>
+        <h2>Transaction Pusher</h2>
+    </header>
 
     <div class="center">
 
         {{#txs}}
-            <h3>Attempting to push tx: {{tx_hash}}</h3>
+            <p>Attempting to push tx: {{tx_hash}}</p>
         {{/txs}}
 
         {{#has_error}}
             <h4 style="color:red">Attempt failed</h4>
-            <h4>{{error_msg}}</h4>
+            <p>{{error_msg}}</p>
         {{/has_error}}
         {{^has_error}}
             <h4 style="color:green">Success</h4>
-            <h4>
+            <p>
                 Your tx should be already in the mempool waiting to be included
                 in an upcoming block.
-            </h4>
+            </p>
 
             {{#txs}}
-                <h4>Go to tx: <a href="/tx/{{tx_hash}}">{{tx_hash}}</a></h4>
+                <p>Go to tx: <a href="/tx/{{tx_hash}}">{{tx_hash}}</a></p>
             {{/txs}}
 
         {{/has_error}}
