--- a/src/templates/rawoutputkeys.html
+++ b/src/templates/rawoutputkeys.html
@@ -1,25 +1,24 @@
-<div>
-    <div class="center">
-        <br/>
-        <h3 class="center">Signed Outputs Public Keys Checker</h3>
-    </div>
+<div class="row">
+
+    <header>
+        <h2 class="danger">Signed Outputs Public Keys Checker</h2>
+    </header>
+
+    <p><b>Paste base64 encoded, signed output keys data here</b><br/>
+    (In Linux, can get base64 signed raw tx data: <i>base64 your_output_keys_filename | xclip -selection clipboard</i>)<br/>
+    (In Windows, can get base64 signed raw tx data: <i>certutil.exe -encode -f your_output_keys_filename encoded.txt & type "encoded.txt" | clip</i>)</p>
 
 
-    <div class="center">
-        <form action="/checkrawoutputkeys" method="post" style="width:100%; margin-top:15px" class="style-1">
-            Paste base64 encoded, signed output keys data here<br/>
-            (In Linux, can get base64 signed raw tx data: <i>base64 your_output_keys_filename | xclip -selection clipboard</i>)<br/>
-            (In Windows, can get base64 signed raw tx data: <i>certutil.exe -encode -f your_output_keys_filename encoded.txt & type "encoded.txt" | clip</i>)<br/>
-            <textarea name="rawoutputkeysdata" rows="20" cols="80"></textarea><br/><br/>
-            Viewkey (<i>output keys file data is encoded using your viewkey. Thus is needed for decryption</i>)
+    <div>
+        <form action="/checkrawoutputkeys" method="post">
+            <textarea name="rawoutputkeysdata" rows="10" cols="80"></textarea>
+            <p><b>Viewkey (<i>output keys file data is encoded using your viewkey. Thus is needed for decryption</i>)</b>
             <br/>
-            Note: data and viewkey are sent to the server, as the calculations are done on the server side
-            <br/>
+            Note: data and viewkey are sent to the server, as the calculations are done on the server side</p>
+
             <input type="text"  name="viewkey" size="80">
-            <br/>
-            <input type="submit" name="action" value="check">
+            <input class="button" type="submit" name="action" value="check">
         </form>
     </div>
-
 
 </div>
