--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -7,6 +7,7 @@
     <meta http-equiv="expires" content="0" />
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
     <meta http-equiv="pragma" content="no-cache" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {{#refresh}}
     <meta http-equiv="refresh" content="10">
     {{/refresh}}
@@ -25,8 +26,9 @@
         <div class="flex two">
             <div class="full half-1000">
                 <header>
-                    <h1 id="site-title"><a href="/">Onion Monero Blockchain Explorer</a></h1>
-                    <p id="site-sub-title">(no javascript - no cookies - no web analytics trackers - no images - open sourced)</p>
+                    <h1>
+                        <a id="site-title" href="/">MoneroExplorer.com</a> <small style="font-weight:normal">{{#testnet}}testnet{{/testnet}} {{^testnet}}dvwae436pd7nt4bc.onion{{/testnet}}</small>
+                    </h1>
                 </header>
             </div>
             <div class="full half-1000">
