--- a/src/templates/mempool.html
+++ b/src/templates/mempool.html
@@ -1,6 +1,6 @@
     <div class="row">
         <header>
-           <h2>Transaction pool</h2>(no of txs: {{mempool_size}}, size: {{mempool_size_kB}} kB, updated every {{ mempool_refresh_time }} seconds))
+           <h2>Transaction pool</h2>(no of txs: {{mempool_size}}, size: {{mempool_size_kB}} kB, updated every {{ mempool_refresh_time }} seconds)
        </header>
 
 	<table class="primary table">
@@ -27,7 +27,7 @@
             </tr>
             {{/mempooltxs}}
         </table>
-    </div>
+
     {{^mempool_fits_on_front_page}}
       {{#partial_mempool_shown}}
 	<p><center>
