--- a/src/templates/index2.html
+++ b/src/templates/index2.html
@@ -77,7 +77,7 @@
         <div class="card">
           <header>
             <h3 data-tooltip="Median block size limit">
-                Median Blk
+                Median Block Size
             </h3>
           </header>
           <footer>
