--- a/src/templates/index2.html
+++ b/src/templates/index2.html
@@ -55,7 +55,7 @@
 
     {{#emission}}
         <h3 style="font-size: 12px; margin-top: 2px">
-            Monero emission (fees) is {{amount}} ({{fee_amount}}) as of {{blk_no}} block
+            Aeon emission (fees) is {{amount}} ({{fee_amount}}) as of {{blk_no}} block
         </h3>
     {{/emission}}
 
