--- a/src/templates/partials/tx_details.html
+++ b/src/templates/partials/tx_details.html
@@ -82,7 +82,7 @@
                 <input type="radio" id="tab-1" name="tab-group-1" checked>
                 <label for="tab-1">Decode outputs</label>
                 <div class="content">
-                    <h4 style="margin: 0px">Check which outputs belong to given Monero address/subaddress and viewkey</h4>
+                    <h4 style="margin: 0px">Check which outputs belong to given Aeon address/subaddress and viewkey</h4>
                     <h5 style="margin: 0px">
                         For RingCT transactions, outputs' amounts are also decoded
                         <br/>
@@ -95,7 +95,7 @@
                     </h5>
                     <form action="/myoutputs" method="post" style="width:100%; margin-top:2px" class="style-1">
                         <input type="hidden" name="tx_hash" value="{{tx_hash}}"><br/>
-                        <input type="text" name="xmr_address" size="120" placeholder="Monero address/subaddress"><br/>
+                        <input type="text" name="xmr_address" size="120" placeholder="Aeon address/subaddress"><br/>
                         <input type="text" name="viewkey" size="120" placeholder="Private viewkey" style="margin-top:5px"><br/>
                         <input type="hidden" name="raw_tx_data" value="{{raw_tx_data}}">
                         <!--above raw_tx_data field only used when checking raw tx data through tx pusher-->
@@ -117,10 +117,10 @@
                 <label for="tab-2">Prove sending</label>
 
                 <div class="content">
-                    <h4 style="margin: 0px">Prove to someone that you have sent them Monero in this transaction</h4>
+                    <h4 style="margin: 0px">Prove to someone that you have sent them Aeon in this transaction</h4>
                     <h5 style="margin: 0px">
                         Tx private key can be obtained using <i>get_tx_key</i>
-                        command in  <i>monero-wallet-cli</i> command line tool
+                        command in  <i>aeon-wallet-cli</i> command line tool
                         <br/>
                         {{#enable_js}}
                             Note: address/subaddress and tx private key are NOT sent to the server, as the calculations are done on the client side
@@ -134,7 +134,7 @@
                        <input type="text" name="txprvkey" size="120" placeholder="Tx private key"><br/>
                         <input type="hidden" name="raw_tx_data" value="{{raw_tx_data}}">
                         <!--above raw_tx_data field only used when checking raw tx data through tx pusher-->
-                       <input type="text" name="xmraddress" size="120" placeholder="Recipient's monero address/subaddress" style="margin-top:5px"><br/>
+                       <input type="text" name="xmraddress" size="120" placeholder="Recipient's Aeon address/subaddress" style="margin-top:5px"><br/>
 
                         {{#enable_js}}
                             <!-- if have js, DONOT submit the form to server.
