replace monero with aeon

--- a/src/templates/address.html
+++ b/src/templates/address.html
@@ -25,9 +25,8 @@
 
     <h3>
         Transactions:<br/>
-	Sorry, its not possible to find txs associated with normal addresses in Monero
+	Sorry, its not possible to find txs associated with normal addresses in AEON
     </h3>
 
 </div>
 <br/>
-
