--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -13,7 +13,7 @@
     {{/refresh}}
     <link href="favicon.ico" type="image/x-icon" rel="icon" />
     <link href="favicon.ico" type="image/x-icon" rel="shortcut icon" />
-    <title>Monero Explorer</title>
+    <title>AEON Block Explorer</title>
     <!--<link rel="stylesheet" type="text/css" href="/css/style.css">-->
     <style type="text/css">
         {{#css_styles}}{{/css_styles}}
@@ -27,7 +27,7 @@
             <div class="full half-1000">
                 <header>
                     <h1>
-                        <a id="site-title" href="/">MoneroExplorer.com</a> <small style="font-weight:normal">{{#testnet}}testnet{{/testnet}} {{^testnet}}dvwae436pd7nt4bc.onion{{/testnet}}</small>
+                        <a id="site-title" href="/">AeonBlocks.com</a> <small style="font-weight:normal">{{#testnet}}testnet{{/testnet}} {{^testnet}} {{/testnet}}</small>
                     </h1>
                 </header>
             </div>
