--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -5,6 +5,9 @@
                     | explorer version (api): {{git_branch_name}}-{{last_git_commit_date}}-{{last_git_commit_hash}} ({{api}})
                     | monero version: {{monero_version_full}}
                 </p>
+                <p>
+                  AeonBlocks.com wallet : Wmt1L7xXiWe858dzG3Mv6ygURq2Bb8rfShUPZr29eKoU9iUHkXA6qDtSzWbMM3YjiZMsYZxmteBHcVuG5pQZfAqu22aRBBZ34
+                </p>
                 </center>
             </div>
         </div>
