--- a/src/templates/partials/tx_details.html
+++ b/src/templates/partials/tx_details.html
@@ -54,7 +54,7 @@
 
 <div class="row">
     <header>
-        <h3>{{outputs_no}} output(s) for total of {{outputs_xmr_sum}} XMR</h3>
+        <h3>{{outputs_no}} output(s) for total of {{outputs_xmr_sum}} AEON</h3>
     </header>
       <table class="primary table">
           <thead>
@@ -87,7 +87,7 @@
 
         <div class="row">
             <div class="content">
-                <h4>Check which outputs belong to given Monero address and viewkey</h4>
+                <h4>Check which outputs belong to given AEON address and viewkey</h4>
                 <p>
                     For RingCT transactions, outputs' amounts are also decoded
                     <br/>
@@ -95,7 +95,7 @@
                 </p>
                 <form action="/myoutputs" method="post" style="width:100%; margin-top:2px" class="style-1">
                     <input type="hidden" name="tx_hash" value="{{tx_hash}}"><br/>
-                    <input type="text" name="xmr_address" size="90" placeholder="Monero address"><br/>
+                    <input type="text" name="xmr_address" size="90" placeholder="AEON address"><br/>
                     <input type="text" name="viewkey" size="90" placeholder="Private viewkey" style="margin-top:5px"><br/>
                     <input type="hidden" name="raw_tx_data" value="{{raw_tx_data}}">
                     <!--above raw_tx_data field only used when checking raw tx data through tx pusher-->
@@ -104,17 +104,17 @@
             </div>
 
             <div class="content">
-                <h4>Prove to someone that you send them Monero in this transaction</h4>
+                <h4>Prove to someone that you send them AEON in this transaction</h4>
                 <p>
                 Tx private key can be obtained using <i>get_tx_key</i>
-                command in  <i>monero-wallet-cli</i> command line tool
+                command in  <i>aeon-wallet-cli</i> command line tool
                 <br/>
                 Note: address and tx private key are sent to the server, as the calculations are done on the server side
                 </p>
                 <form action="/prove" method="post" style="width:100%;margin-top:2px" class="style-1">
                 <input type="hidden" name="txhash" value="{{tx_hash}}"><br/>
                 <input type="text" name="txprvkey" size="90" placeholder="Tx private key"><br/>
-                <input type="text" name="xmraddress" size="90" placeholder="Recipient's Monero Address" style="margin-top:5px"><br/>
+                <input type="text" name="xmraddress" size="90" placeholder="Recipient's AEON Address" style="margin-top:5px"><br/>
                 <input type="submit" value="Prove sending" style="margin-top:5px">
                 </form>
             </div>
@@ -144,14 +144,14 @@
 
     <header>
         {{^inputs_xmr_sum_not_zero}}
-        <h3>{{inputs_no}} input(s) for total of {{inputs_xmr_sum}} xmr</h3>
+        <h3>{{inputs_no}} input(s) for total of {{inputs_xmr_sum}} AEON</h3>
         {{/inputs_xmr_sum_not_zero}}
         {{#inputs_xmr_sum_not_zero}}
         {{^have_any_unknown_amount}}
-        <h3>{{inputs_no}} inputs(s) for total of {{inputs_xmr_sum}} xmr</h3>
+        <h3>{{inputs_no}} inputs(s) for total of {{inputs_xmr_sum}} AEON</h3>
         {{/have_any_unknown_amount}}
         {{#have_any_unknown_amount}}
-        <h3>{{inputs_no}} inputs(s) for total of at least {{inputs_xmr_sum}} xmr</h3>
+        <h3>{{inputs_no}} inputs(s) for total of at least {{inputs_xmr_sum}} AEON</h3>
         {{/have_any_unknown_amount}}
         {{/inputs_xmr_sum_not_zero}}
 
@@ -324,4 +324,3 @@
     </div>
 </div>
 {{/show_cache_times}}
-
