replace monero with aeon

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -3,7 +3,7 @@
                 <p>
                     <a href="https://github.com/moneroexamples/onion-monero-blockchain-explorer">source code</a>
                     | explorer version (api): {{git_branch_name}}-{{last_git_commit_date}}-{{last_git_commit_hash}} ({{api}})
-                    | monero version: {{monero_version_full}}
+                    | aeon version: {{monero_version_full}}
                 </p>
                 <p>
                   AeonBlocks.com wallet : Wmt1L7xXiWe858dzG3Mv6ygURq2Bb8rfShUPZr29eKoU9iUHkXA6qDtSzWbMM3YjiZMsYZxmteBHcVuG5pQZfAqu22aRBBZ34
