--- a/src/templates/index2.html
+++ b/src/templates/index2.html
@@ -137,7 +137,7 @@
                     <td><a href="/tx/{{hash}}">{{hash}}</a></td>
                     <td>{{tx_fee_short}}</td>
                     <td>{{sum_outputs_short}}</td>
-                    <td>{{no_inputs}}({{no_nonrct_inputs}})/{{no_outputs}}</td>
+                    <td>{{no_inputs}}/{{no_outputs}}/{{pID}}</td>
                     <td>{{mixin}}</td>
                     <td>{{tx_size_short}}</td>
                 </tr>
