--- a/src/templates/mempool.html
+++ b/src/templates/mempool.html
@@ -21,7 +21,7 @@
                 <td><a href="/tx/{{hash}}">{{hash}}</a></td>
                 <td>{{fee}}/{{payed_for_kB}}</td>
                 <td>{{xmr_outputs}}</td>
-                <td>{{no_inputs}}({{no_nonrct_inputs}})/{{no_outputs}}</td>
+                <td>{{no_inputs}}/{{no_outputs}}/{{pID}}</td>
                 <td>{{mixin}}</td>
                 <td>{{txsize}}</td>
             </tr>
